@@ -1,0 +1,38 @@
+<% @heading = "#{@don_attachment.title} don_attachment management" %>
+
+<h1><%=h @don_attachment.title %></h1>
+<%= secure_form_tag :action => "edit_don_attachment" %>
+<%= hidden_field "don_attachment", "id", "value" => @don_attachment.id %>
+
+id:<%= @don_attachment.id %> |
+ファイルサイズ:<%= @don_attachment.size if @don_attachment.size %> バイト |
+ファイル形式:<%= @don_attachment.content_type if @don_attachment.content_type %>
+<br>
+body:<%= text_field "don_attachment", "body", "size" => 80, "value" => @don_attachment.body %>
+<br>
+関連づけられたarticle:
+<% @don_attachment.articles.each do |pa| %>
+<%= check_box "bp", pa.id, :checked => 'checked' %>
+<a href="#<%= pa.id %>"><%= pa.id %></a> /
+<% end %>
+<br>追加するarticle id:<input type="text" id="don_attachment_aid" name="don_attachment[aid]" size="20">
+<p>
+<%= submit_tag %>
+<%= end_form_tag %>
+
+<div class="kakomi">
+<% @don_attachment.articles.each do |pa| %>
+<a name="<%= pa.id %>">id:<%= pa.id %></a>
+<div id="ca_<%= pa.id %>">
+<script type="text/javascript">
+//<![CDATA[
+<%= remote_function(:update => "ca_#{pa.id}", :url => {:controller => "notes", :action => "pick_article_a", :pickid => pa.id }, :method => 'get') %>
+//]]>
+</script>
+</div>
+<% end %>
+</div>
+オリジナルサイズの表示
+<br>
+<% rpath = '/' + @don_attachment.path.split('/public/').last %>
+<%= image_tag(rpath) %>
